# Django_React_Docker_Template

./: .env  .gitignore  Readme.md  compose.yml
backend/: .env  Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
